--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -407,7 +407,7 @@
     font-size: 1rem;
   }
   .cactus-dashboard-templete_image_view img {
-    width: 12rem;
+    /* width: 12rem; */
     height: 15rem;
   }
   .cactus-dashboard-templete_title_view {
