--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -215,6 +215,44 @@
   justify-content: center;
 }
 
+/* Modal CSS */
+
+.thumbnail-container {
+  position: relative;
+  width: 100%;
+  height: auto;
+}
+
+.add-product-modal-main-container-video{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999
+}
+
+.add-product-modal-container-product-description-detail-video{
+  margin-left: 20rem;
+  /* width: 800px; */
+  height: 500px;
+  overflow: hidden;
+  word-wrap: break-word;
+  background-color: #fff;
+  padding: 20px; 
+  border-radius: 8px; 
+}
+
+.video-model{
+  height: 425px;
+  width: 100%;
+  overflow-y: hidden;
+}
+
 /* -------------Media Query--------------- */
 
 @media screen and (max-width: 980px) {
