--- a/src/components/genderModel/genderModel.css
+++ b/src/components/genderModel/genderModel.css
@@ -110,6 +110,8 @@
   padding-left: 5rem;
   padding-right: 2rem;
   width: 100%;
+  height: 50vh;
+  overflow-y: auto;
 }
 
 .cactus-gender_model_detail_images_view div {
