--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -13,6 +13,13 @@
   margin-right: 5rem;
 }
 
+.cactus-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 5rem;
+}
+
 .cactus-templete_detail_side__view_arrow_up {
   width: 2.4rem;
   height: 2.4rem;
@@ -307,10 +314,48 @@
   .cactus-templete_detail-form_dropdown_top_view {
     width: 30rem;
   }
+
+  .cactus-default-select-btn {
+    height: 70px;
+  }
+
+  .cactus-templete_poster-desc > p {
+    width: 315px;
+  }
+
+  .cactus-templete_detail-main_image {
+    margin-left: 7rem !important;
+  }
+
+  .cactus-templete_detail-main_image_button_view {
+    margin: 0;
+    margin-left: 7rem;
+  }
+
   .cactus-templete_detail-form_top_view {
     width: 32rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  .cactus-templete_detail_side_templetes_view {
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .cactus-list {
+    flex-direction: row;
+    margin-right: unset;
+    width: 250px;
+    overflow-x: scroll;
+  }
+
+  .order-buttons {
+    flex-direction: column;
+  }
+
+  .order-buttons > div {
+    margin-bottom: 1rem;
   }
 }
