--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -149,6 +149,7 @@
   -moz-box-shadow: -3px 4px 5px -1px rgba(0,0,0,0.23);
   max-height: 80vh;
   overflow-y: auto;
+  margin-left: -90px;
 }
 
 .important-font-weight {
