--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -400,6 +400,7 @@
 @media screen and (max-width: 520px) {
   .cactus-dashboard-templete_title_view {
     padding: 0;
+    justify-content: center;
   }
   .cactus-dashboard-templete_image_view {
     margin: unset;
