--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -236,6 +236,17 @@
   justify-content: center;
 }
 
+.commander-modal-img {
+  height: 100px;
+  min-width: 150px;
+  object-fit: contain;
+  object-position: top left;
+}
+
+.display-image {
+  display: none;
+}
+
 /* Modal CSS */
 
 .thumbnail-container {
