--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -140,6 +140,15 @@
   position: relative;
 }
 
+.complete-cover {
+  position: absolute;
+  width: 100vw;
+  height: 100vw;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 .navbar-dropdown {
   position: absolute;
   background-color: white;
