--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -148,6 +148,19 @@
   filter: invert(1);
 }
 
+.overlay-loader-container {
+  z-index: 100000000;
+  position: absolute;
+  width: 354px !important;
+  height: 100% !important;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
 #margin-none {
   margin: unset !important;
 }
