--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -151,8 +151,8 @@
 .overlay-loader-container {
   z-index: 100000000;
   position: absolute;
-  width: 354px !important;
-  height: 100% !important;
+  width: 354px;
+  height: 100%;
   top: 0px;
   left: 0px;
   display: flex;
@@ -373,6 +373,7 @@
 }
 
 @media screen and (max-width: 540px) {
+  
   .video-model {
     height: unset;
   }
