--- a/src/components/genderModel/genderModel.css
+++ b/src/components/genderModel/genderModel.css
@@ -113,7 +113,7 @@
 }
 
 .cactus-gender_model_detail_images_view div {
-  width: 21rem;
+  width: 20%;
   height: 35rem;
   margin-right: 1rem;
   margin-bottom: 4rem;
