--- a/src/components/templeteSliderView/templeteSliderView.css
+++ b/src/components/templeteSliderView/templeteSliderView.css
@@ -37,39 +37,45 @@
 .cactus-dashboard-slider_view {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  background-color: #faf6ee;
+
+  border-radius: 5px;
 }
 
 .cactus-dashboard-slider_arrow_image img {
-  width: 6.4rem;
-  height: 6.4rem;
-  object-fit: cover;
-  margin-left: 6.4rem;
-  margin-bottom: 1rem;
+  width: 5rem;
+  height: 4rem;
+  object-fit: contain;
   cursor: pointer;
+  background: #e1ddd6;
 }
 
 .cactus-dashboard-slider_templete_top_view {
   display: flex;
   flex-direction: row;
   align-items: center;
+
+  padding: 7px;
+  overflow-x: auto;
 }
 
 .cactus-dashboard-slider_templete_view {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: center;
   margin-left: 6.4rem;
   cursor: pointer;
 }
 
 .cactus-dashboard-slider_templete_view img {
-  width: 15rem;
-  height: 15rem;
+  width: 6rem;
+  height: 6rem;
   object-fit: cover;
   border-radius: 10rem;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
+  margin-right: 4rem;
 
   border: 4px solid #dae1ed;
 }
@@ -81,6 +87,16 @@
   line-height: 3.1rem;
   text-align: center;
   color: #333333;
+}
+
+.cactus-dashboard-slider_arrow_image {
+  background-color: #e1ddd6;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 15rem;
+  border-radius: 5px;
 }
 
 @media screen and (max-width: 950px) {
