--- a/src/pages/searchPage/searchPage.css
+++ b/src/pages/searchPage/searchPage.css
@@ -29,22 +29,24 @@
   display: flex;
   flex-direction: row;
   width: 80%;
-  top: -4.5rem;
-  padding-left: 3rem;
-  padding-right: 3.5rem;
+  /* top: -4.5rem; */
+  /* padding-left: 3rem; */
+  /* padding-right: 3.5rem; */
   align-items: center;
-  position: absolute;
+  /* position: absolute; */
   height: 9rem;
   background: #ffffff;
   box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
+  margin-left: 3rem;
 }
 
 .cactus-search-search_icon {
   width: 2.4rem;
   height: 2.4rem;
   object-fit: cover;
-  margin-right: 0.5rem;
+  margin-right: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .cactus-search-search_view input {
@@ -57,6 +59,17 @@
   border: none;
   flex: 1;
   margin-right: 1rem;
+}
+
+.cactus-search-filters-icon {
+  border: 3px solid #bb4455;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+
+.cactus-search-filters-icon img {
+  width: 35px;
+  padding: 2px;
 }
 
 ::-webkit-input-placeholder {
@@ -107,6 +120,10 @@
 }
 
 @media screen and (max-width: 520px) {
+  .cactus-search-search_view {
+    height: 6rem;
+  }
+
   .cactus-search-search_view {
     margin-left: 1rem;
     margin-right: 1rem;
