--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  background-color: #faf6ee;
 }
 
 .cactus-dashboard-banner_top_view {
@@ -194,7 +195,7 @@
 }
 
 .cactus-prouct-main-container {
-  margin-left: 3rem;
+  margin-left: 2rem;
 }
 
 .cactus-prouct-main-container > p {
@@ -226,7 +227,7 @@
 }
 
 .cactus-product-min-max-container {
-
+  width: 22rem;
 }
 
 .cactus-product-min-max-container > p {
