--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -134,6 +134,7 @@
 }
 
 .cactus-dashboard-banner_image_view img {
+  object-fit: contain;
   width: 55%;
   height: 93%;
   /* border-radius: 5rem; */
