--- a/src/components/templeteView/templeteView.css
+++ b/src/components/templeteView/templeteView.css
@@ -1,16 +1,16 @@
 .cactus-dashboard-templete_view {
   display: flex;
   flex-direction: column;
-  width: 30.3rem;
+  width: 26%;
   background: #ffffff;
-  margin-right: 4.3rem;
+  margin-right: 4%;
   margin-bottom: 4.1rem;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 
 .cactus-dashboard-templete_image_view img {
-  width: 30.3rem;
+  width: 100%;
   height: 37rem;
   object-fit: cover;
 }
