--- a/src/pages/templeteDetail/templeteDetail.css
+++ b/src/pages/templeteDetail/templeteDetail.css
@@ -402,6 +402,10 @@
   justify-content: center;
 }
 
+#pricing-main-component-text-container > * {
+  font-family: 'K2D';
+}
+
 /* -------------Media Query--------------- */
 
 @media screen and (max-width: 980px) {
@@ -412,8 +416,10 @@
 
 @media screen and (max-width: 850px) {
   .cactus-templet_detail_top_container {
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
+    flex-direction: column-reverse;
+    align-items: flex-start;
   }
 }
 @media screen and (max-width: 620px) {
@@ -422,7 +428,7 @@
     flex-wrap: wrap;
   } */
   .cactus-templete_detail-main_image_view {
-    margin-right: 0;
+    margin-right: -100px;
     /* width: 100%; */
     /* height: 52rem; */
   }
@@ -476,12 +482,12 @@
   }
 
   .cactus-templete_detail-main_image_main_mode {
-    margin-left: 7rem !important;
+    /* margin-left: -11rem !important; */
   }
 
   .cactus-templete_detail-main_image_button_view {
     margin: 0;
-    margin-left: 7rem;
+    margin-left: 0rem;
   }
 
   .cactus-templete_detail-form_top_view {
