--- a/src/pages/searchPage/searchPage.css
+++ b/src/pages/searchPage/searchPage.css
@@ -62,7 +62,7 @@
 }
 
 .cactus-search-filters-icon {
-  border: 3px solid #bb4455;
+  border: 3px solid rgb(43, 40, 58);
   border-radius: 5px;
   margin-right: 10px;
 }
