--- a/src/components/templeteView/templeteView.css
+++ b/src/components/templeteView/templeteView.css
@@ -1,7 +1,7 @@
 .cactus-dashboard-templete_view {
   display: flex;
   flex-direction: column;
-  width: 26%;
+  max-width: 22%;
   background: #ffffff;
   margin-right: 4%;
   margin-bottom: 4.1rem;
@@ -11,8 +11,8 @@
 
 .cactus-dashboard-templete_image_view img {
   width: 100%;
-  height: 37rem;
-  object-fit: cover;
+  max-height: 33rem;
+  object-fit: contain;
 }
 
 .cactus-dashboard-templete_title_view {
@@ -65,4 +65,26 @@
   text-align: center;
   color: #333333;
   padding-bottom: 1rem;
+}
+
+@media screen and (max-width: 1100px) {
+
+  .cactus-dashboard-templete_image_view img {
+    width: 100%;
+  }
+
+  .cactus-dashboard-templete_view {
+    width: 29%;
+    max-width: none;
+  }
+
+}
+
+@media screen and (max-width: 550px) {
+
+  .cactus-dashboard-templete_view {
+    width: 28%;
+    max-width: none;
+  }
+
 }
